# zombie_dice

./: .gitignore  README.md  pyproject.toml
tests/: test_dice.py  test_pipe.py  test_tube.py
zombie_dice/entities/: dice.py  pipe.py  tube.py
