[tool.poetry]
name = "zombie-dice"
version = "0.1.0"
description = ""
authors = ["Fernando Antunes <f.antunes84@gmail.com>"]
readme = "README.md"
packages = [{include = "zombie_dice"}]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
